RESOLVED FIXED221346
REGRESSION (270392): Launch time regression under IOSurface::maximumSize()
https://bugs.webkit.org/show_bug.cgi?id=221346
Summary REGRESSION (270392): Launch time regression under IOSurface::maximumSize()
Tim Horton
Reported 2021-02-03 11:18:10 PST
REGRESSION (270392): Launch time regression under IOSurface::maximumSize()
Attachments
Patch (2.06 KB, patch)
2021-02-03 11:21 PST, Tim Horton
no flags
Tim Horton
Comment 1 2021-02-03 11:21:02 PST
Tim Horton
Comment 2 2021-02-03 11:21:05 PST
Sam Weinig
Comment 3 2021-02-03 11:47:11 PST
Comment on attachment 419160 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=419160&action=review > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:477 > + parameters.maximumIOSurfaceSize = WebCore::IOSurface::maximumSize(); Does it have a reasonable default value so that if something in the WebProcess (and GPU process is not enabled for DOM) tries to read this it won't be garbage?
Tim Horton
Comment 4 2021-02-03 11:48:00 PST
(In reply to Sam Weinig from comment #3) > Comment on attachment 419160 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=419160&action=review > > > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:477 > > + parameters.maximumIOSurfaceSize = WebCore::IOSurface::maximumSize(); > > Does it have a reasonable default value so that if something in the > WebProcess (and GPU process is not enabled for DOM) tries to read this it > won't be garbage? The WebProcess will compute it if it's still 0x0 the first time it's read.
Tim Horton
Comment 5 2021-02-03 11:51:08 PST
(And, to be clear, IntSize is 0x0 by default)
EWS
Comment 6 2021-02-03 12:32:27 PST
Committed r272335: <https://trac.webkit.org/changeset/272335> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419160 [details].
Ryan Haddad
Comment 7 2021-02-11 16:15:45 PST
There was a follow up for this change: https://trac.webkit.org/changeset/272355/webkit
Note You need to log in before you can comment on or make changes to this bug.