REGRESSION (r270392): Launch time regression under IOSurface::maximumSize() https://bugs.webkit.org/show_bug.cgi?id=221346 <rdar://problem/73507706>

Reviewed by Sam Weinig.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
Scope r270392 to only the case where it is needed, when DOM rendering in the GPU process
is enabled and the Web Content process does not have access to IOSurface,
because it causes a small launch time regression.


Canonical link: https://commits.webkit.org/233663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272335 268f45cc-cd09-0410-ab3c-d52691b4dbfc